# AddisMap

./: .DS_Store.orig  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
addismap/: db.sqlite3  manage.py
addismap/addismap/: asgi.py  settings.py  urls.py
addismap/addismap/templates/: base.html
addismap/addismap/templates/bobbin_lace/: memb_reg.html
addismap/addismap/templates/mapvis/: addismapapp.html  mapapp.html  show.html
addismap/bobbin_lace/: apps.py  views.py
addismap/mapvis/: adjacency.py  algorithms.py  astar.py  bfs.py  bole.osm  dijkstra.py  extract.py  forms.py  gerji.osm  greedysearch.py  parser_POST.py  store.py  views.py
addismap/static/css/: main.css
addismap/static/js/: gerji.js  map.js  showpath.js  visualizer.js
backend/: Dockerfile
backend/src/: db.sqlite3
backend/src/addismap/: settings.py  urls.py  wsgi.py
backend/src/mapvis/: adjacency.py  apps.py  astar.py  dijkstra.py  gerjisecond.osm  oak.osm  parser.py  store.py  tests.py  views.py
backend/src/mapvis/api/: urls.py  views.py
backend/src/static/js/: map.js  (+2 more)
frontend/: Dockerfile  package.json
frontend/frontend/: package-lock.json  package.json
frontend/frontend/src/: App.css  App.js  ShowPath.js  map.js
frontend/public/: index.html
frontend/src/: App.js  ShowPath.css  ShowPath.js  index.js
frontend/src/Components/: ControlVisualizer.css  ControlVisualizer.js  Header.js  Instructions.css  LatLngForm.js  Map.js  MapApp.js  MapForm.js  ShowHeader.css  ShowHeader.js
(+30 files in other folders)
